--- a/index.html
+++ b/index.html
@@ -8,9 +8,9 @@
     <link rel="stylesheet" type="text/css" href="style.css" />
     <link rel="preconnect" href="https://fonts.googleapis.com" />
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
-    <link
-      href="https://fonts.googleapis.com/css2?family=Big+Shoulders+Display:wght@700&family=Josefin+Sans&family=Lexend+Deca&family=Poppins:wght@400;500;600;700&display=swap"
-      rel="stylesheet"/>
+    <link href="https://fonts.googleapis.com/css2?family=Big+Shoulders+Display:wght@700&family=Josefin+Sans&family=Lexend+Deca&family=Poppins:wght@400;500;600;700&display=swap" rel="stylesheet"/>
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.1.1/css/all.min.css" integrity="sha512-KfkfwYDsLkIlwQp6LFnl8zNdLGxu9YAA1QvwINks4PhcElQSvqcyVLLD9aMhXd13uQjoXtEKNosOWaZqXgel0g==" crossorigin="anonymous" referrerpolicy="no-referrer"/>
+
   </head>
 
   <body>
@@ -29,17 +29,42 @@
           <p><strong>Try it free 7 days</strong> then $20/mo. thereafter</p>
         </div>
         <div>
-          <form action="#">
-            <input type="text" name="fname" placeholder="First Name" required />
-            <input type="text" name="lname" placeholder="Last Name" required />
-            <input type="email" placeholder="Email Address" required />
-            <input type="password" placeholder="Password" required />
+          <form id="form" action="#">
+            <div class="form-control">
+              <input type="text" id="firstName" name="fname" placeholder="First Name">
+              <i class="fa-solid fa-circle-check"></i>
+              <i class="fas fa-exclamation-circle"></i>
+              <small>Error message</small>
+            </div>
+            
+            <div class="form-control">
+              <input type="text" id="lastName" name="lname" placeholder="Last Name">
+              <i class="fa-solid fa-circle-check"></i>
+              <i class="fas fa-exclamation-circle"></i>
+              <small>Error message</small>
+            </div>
+
+            <div class="form-control">
+              <input type="email" id="email" placeholder="Email Address"/>
+              <i class="fa-solid fa-circle-check"></i>
+              <i class="fas fa-exclamation-circle"></i>
+              <small>Error message</small>
+            </div>
+
+            <div class="form-control">
+              <input class="form-control" type="password" id="password" placeholder="Password"/>
+              <i class="fa-solid fa-circle-check"></i>
+              <i class="fas fa-exclamation-circle"></i>
+              <small>Error message</small>
+            </div>
+
             <button type="submit">CLAIM YOUR FREE TRIAL</button>
             <p>
               By clicking the button, you are agreeing to our
               <a href="#">Terms and Services</a>
             </p>
           </form>
+          <script src="script.js"></script>
         </div>
       </div>
     </div>
